Back to single domain mode
